--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "engines": {
     "node": "16.13.1"
-  }, 
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "body-parser": "^1.19.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.3",
+    "moment": "^2.29.1",
     "pug": "^3.0.2",
     "sequelize": "^6.17.0",
     "sequelize-cli": "^6.4.1",
