--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "moment": "^2.29.1",
     "pug": "^3.0.2",
     "sequelize": "^6.17.0",
