--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "node": "16.13.1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Matt Thurmond",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
-    "cookie-parser": "^1.4.6",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "moment": "^2.29.1",
