--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pug": "^3.0.2",
     "sequelize": "^6.17.0",
     "sequelize-cli": "^6.4.1",
+    "slug": "^5.3.0",
     "sqlite3": "^4.2.0"
   }
 }
