--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-rate-limit": "^6.3.0",
     "express-session": "^1.17.2",
     "moment": "^2.29.1",
+    "nanoid": "^3.3.2",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "pug": "^3.0.2",
