--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "pug": "^3.0.2",
+    "quill": "^1.3.7",
     "sequelize": "^6.21.3",
     "sequelize-cli": "^6.4.1",
     "slug": "^5.3.0"
