--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-rate-limit": "^6.5.1",
     "express-session": "^1.17.3",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^3.3.4",
     "nodemon": "^2.0.19",
     "pg": "^8.7.3",
