--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Matt Thurmond",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1230.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "connect-session-sequelize": "^7.1.4",
