--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node app.js"
   },
   "engines": {
@@ -33,5 +33,10 @@
     "sequelize": "^6.21.3",
     "sequelize-cli": "^6.4.1",
     "slug": "^5.3.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^10.1.0"
   }
 }
